added a jquery based progress bar

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 ==== A collection of interesting javascript snippets that we are working on ;-) ====
+
+1) progres_bar -- A Jquery based progress bar class
