added code for a javascript widget that implements a tabstrip

--- a/README
+++ b/README
@@ -4,3 +4,5 @@
 
 2) star_rating/* -- A star rating JS widget based on prototype's slider.js
    *) This approach uses a single image which is used to render all there cases of stars (full, half full, empty) using percentage based background-positioning.
+
+3) tab_widget/* -- A widget to create tabs for your links with content in the same page
